--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Bmi</string>
+    <string name="Your_BMI_is_"></string>
+    <string name="BMI_title">BMI</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
+    <string name="calculate_bmi">CALCULATE bMI</string>
+    <string name="info">INFO</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="no">NO</string>
 </resources>
